--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -125,7 +125,7 @@
 {% endif %}
 
 {% if site.google_site_verification %}
-  <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
+  <meta name="google-site-verification" content="JyFM99OCbbLL63SI6zdBhsTXnlI4oEEq4h-oQIvWQ5s" />
 {% endif %}
 {% if site.bing_site_verification %}
   <meta name="msvalidate.01" content="{{ site.bing_site_verification }}">
